# soloC

c1/: .gitignore
c10/: Cargo.toml
c10/src/: game.rs  heatmap.rs  main.rs  particles.rs  pollution.rs  purifier.rs  recorder.rs  sph.rs  temperature.rs  wind_field.rs  wind_turbine.rs
c100/: README.md
c11/: README.md  install_dependencies.ps1  start_backend.ps1  start_frontend.ps1
c11/rust-fft/: Cargo.toml  build_wasm.ps1
c11/rust-fft/src/: lib.rs
c12/: .env.example  docker-compose.yml
c13/: Makefile  go.mod  main.go
c14/: README.md  requirements.txt  run_backend.py
c16/: Cargo.toml  partitions.csv  sdkconfig.defaults
c16/.cargo/: config.toml
c16/src/: main.rs
c17/: CMakeLists.txt
c17/src/: MainWindow.cpp  MainWindow.h  ModelProperties.cpp  ModelProperties.h  OpenGLViewer.cpp  OpenGLViewer.h  StepParser.cpp  StepParser.h  StlExporter.cpp  StlExporter.h  main.cpp
c18/: README.md
c2/: requirements.txt
c20/: app.py  requirements.txt
c21/: README.md
c22/: go.mod
c24/: debug_long_term.py  debug_stability.py  debug_step_by_step.py  debug_test.py  requirements.txt  setup.py  test_new_features.py
c25/: README.md  go.mod
c26/: index.html  package-lock.json  package.json  vite.config.ts
c26/src-tauri/: Cargo.toml  tauri.conf.json
c26/src-tauri/capabilities/: default.json
c26/src-tauri/icons/: readme.md
c26/src-tauri/src/: git_versioning.rs  graph.rs  main.rs  models.rs  pdf_export.rs  scanner.rs  search.rs  tag_manager.rs
c27/: requirements.txt  run.py
c28/: .env.example  requirements.txt  test_api.py  test_new_features.py  verify_fixes.py
c3/: README.md
c30/: go.mod  main.go
c31/: package-lock.json  package.json  server.js
c32/: .env.example  README.md  package-lock.json  package.json
c33/: README.md  package-lock.json  package.json  server.js
c34/: celery_app.py  config.py  main.py  pso.py  requirements.txt  schemas.py  tasks.py
c35/: README.md  index.html  package-lock.json  package.json  vite.config.js
c35/src-tauri/: Cargo.toml  tauri.conf.json
c35/src-tauri/capabilities/: default.json
c35/src-tauri/src/: commands.rs  cross_book.rs  db.rs  extractors.rs  graph.rs  lib.rs  main.rs  nlp.rs
c36/: README.md  app.py  requirements.txt
c37/: .env.example  README.md  app.py  chroma_index.py  code_smell_service.py  embedding_generator.py  function_extractor.py  llm_suggester.py  repo_scanner.py  requirements.txt
c38/: README.md  start.bat
c39/: .env.example  .gitignore  README.md  pyproject.toml  test_fixes.py
c39/protos/: tracefault.proto
c39/trace_fault/: cli.py  clickhouse_client.py  notifier.py  server.py  sliding_window.py  trace_analyzer.py  tracefault_pb2.py  tracefault_pb2_grpc.py
c40/: .gitignore  README.md  docker-compose.yml  start.bat
c41/: README.md  package.json
c42/: README.md  config.yaml  go.mod  main.go
c43/: README.md
c44/: Cargo.toml  README.md  app.js  index.html
c45/: README.md
c46/: README.md  index.html  package-lock.json  package.json  vite.config.js
c47/: README.md
c48/: README.md  app.py  code_indexer.py  main.py  requirements.txt
c49/: index.html  main.js  road-network.json  traffic-simulator.worker.js
c5/: docker-compose.yml
c50/: Cargo.toml  README.md
c50/src/: config.rs  git.rs  github.rs  hooks.rs  interact.rs  main.rs
c51/: README.md
c52/: README.md
c53/: README.md
c54/: .gitignore  PERFORMANCE_OPTIMIZATION.md  README.md
c54/backend/: CMakeLists.txt  package.json
c54/backend/src/: DataReader.cpp  DataReader.h  DataSliceController.cpp  DataSliceController.h  MIPGenerator.cpp  MIPGenerator.h  main.cpp
c55/: CityTrafficSim.sln
c56/: .gitignore  README.md  start.bat
c56/backend/: Cargo.toml
c56/backend/src/: lib.rs  main.rs
c56/backend/src/alert/: mod.rs
c56/backend/src/api/: mod.rs
c56/backend/src/notify/: console.rs  mod.rs  webhook.rs
c56/backend/src/plugins/: influxdb.rs  mod.rs  prometheus.rs  timescaledb.rs
c56/backend/src/query/: mod.rs  query.pest
c57/: README.md  docker-compose.yml
c58/: CMakeLists.txt  README.md  resources.qrc
c58/qml/: ClipItem.qml  MainWindow.qml  MediaLibraryPanel.qml  PlayerControls.qml  PreviewWindow.qml  TimelineView.qml  TrackItem.qml  main.qml
c58/src/: main.cpp
c58/src/core/: ExportManager.cpp  ExportManager.h  MediaDecoder.cpp  MediaDecoder.h  MediaEncoder.cpp  MediaEncoder.h  MediaLibrary.cpp  MediaLibrary.h  PlayerController.cpp  PlayerController.h  RenderPipeline.cpp  RenderPipeline.h  TimelineModel.cpp  TimelineModel.h
c58/src/qml/: VideoSurface.cpp  VideoSurface.h
c59/: README.md  test_sample.py
c6/: .gitignore  README.md  index.html  package-lock.json  package.json
c6/src-tauri/: Cargo.toml  tauri.conf.json
c6/src-tauri/src/: audio.rs  database.rs  lib.rs  main.rs  models.rs  plugin_host.rs
c6/src-tauri/src/entity/: mod.rs  plugin.rs  prelude.rs  routing.rs  routing_plugin.rs  scene.rs
c6/src-tauri/src/migration/: lib.rs  m20240101_000001_create_routings_table.rs  m20240101_000002_create_scenes_table.rs  m20240101_000003_create_plugins_table.rs  m20240101_000004_create_routing_plugins_table.rs  mod.rs
c60/: LOD_SYSTEM.md  MULTIPLAYER.md  README.md
c61/: README.md
c62/: .gitignore  README.md  start.bat
c63/: README.md
c64/: README.md
c64/cli/: Cargo.toml
c64/cli/src/: main.rs
c65/: TECHNICAL_FIXES.md
c66/: README.md
c67/: Makefile  README.md  go.mod
c68/: README.md  docker-compose.yml
c68/ai-gateway-backend/: Cargo.toml
c68/ai-gateway-backend/src/: cache.rs  handlers.rs  main.rs  router.rs  stats.rs
c69/: index.html  package-lock.json  package.json
c7/: README.md  go.mod
c70/: README.md  index.html  package.json  (+2 more)
c72/src-tauri/: Cargo.toml  tauri.conf.json
c72/src-tauri/src/: main.rs  task_manager.rs  video_processor.rs
c9/: Cargo.toml  example-config.toml
c9/src/: cache.rs  cli.rs  config.rs  fs.rs  main.rs  ssh.rs  sync.rs  tui.rs  watch.rs
c98/player/src-tauri/: Cargo.toml  tauri.conf.json
c98/player/src-tauri/src/: main.rs
c98/recorder/: Cargo.toml
c98/recorder/src/: crypto.rs  main.rs  recorder.rs  types.rs
(+1474 files in other folders)
