[package]
name = "git-auto-pr"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for automated code commits and Pull Request generation"
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
git2 = "0.18"
octocrab = "0.36"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dialoguer = "0.11"
console = "0.15"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
anyhow = "1.0"
regex = "1.10"
