[package]
name = "markdown-knowledge-base"
version = "1.0.0"
description = "Markdown Knowledge Base"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
regex = "1.10"
rayon = "1.8"
printpdf = { version = "0.6", default-features = false }
lazy_static = "1.4"
once_cell = "1.19"
hashbrown = "0.14"
git2 = { version = "0.18", default-features = false }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
