[package]
name = "usb-audio-control-panel"
version = "1.0.0"
description = "多通道USB音频接口控制面板"
authors = ["you"]
edition = "2021"

[lib]
name = "usb_audio_control_panel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
dasp = "0.11"
sea-orm = { version = "0.12", features = ["runtime-tokio-rustls", "sqlx-sqlite", "macros"] }
sea-orm-migration = "0.12"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde", "v7"] }
thiserror = "1"
anyhow = "1"
parking_lot = "0.12"
crossbeam-channel = "0.5"
ringbuf = "0.3"
dirs = "5"
async-trait = "0.1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
libloading = "0.8"
base64 = "0.21"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
