[package]
name = "ai-gateway-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
qdrant-client = "1.8"
fastembed = "0.2"
regex = "1.10"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3"
lru = "0.12"
tokio-sync = "0.1"
hashbrown = "0.14"
