[package]
name = "termrec"
version = "0.1.0"
edition = "2021"
description = "跨平台终端会话录制工具"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
portable-pty = "0.4"
termion = "2.0"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
flate2 = "1.0"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
rpassword = "7.2"
libc = "0.2"
nix = { version = "0.27", features = ["term"] }

[profile.release]
opt-level = 3
